--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Werlds Best Blogg.</h1>
 <%= render 'articles/new' %>
 <% @articles.each do |article| %>
-<h3><%= article.title %></h3>
+<h3><%= link_to article.title, article_path(article.id) %></h3>
 <p><%= article.body %></p>
 <% end %>
